After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 743193 - Fix transfer annotation for tree_model parameter of gtk_tree_get_row_drag_data() and add nullable, optional
Fix transfer annotation for tree_model parameter of gtk_tree_get_row_drag_da...
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: .General
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2015-01-19 17:32 UTC by Christoph Reiter (lazka)
Modified: 2015-01-24 21:12 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch (1.33 KB, patch)
2015-01-19 17:32 UTC, Christoph Reiter (lazka)
committed Details | Review

Description Christoph Reiter (lazka) 2015-01-19 17:32:30 UTC
Created attachment 294903 [details] [review]
patch

The GtkSelectionData does not own the model set with
gtk_tree_set_row_drag_data so change the out param to "transfer none".
This fixes a crash after multiple DnD actions due to the bindings
stealing a reference each time this function is called.

This also adds nullable and optional annotations for tree_model and path while at it.